Desktop sections done

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -92,23 +92,39 @@
         </ul>
 
         <div class="page-content page-content--ux">
-            <h2>Portfolio <b>UX</b></h2>
-            <ul>
-                <li><a href="#">UX #1: Adon</a></li>
-                <li><a href="#">UX #1: Adon</a></li>
-            </ul>
+            <span class="page-content__header">
+                <a href="#" data-toggle-mod="close" class="page-back"><i class="fas fa-arrow-left"></i></a>
+                <h2 class="title">
+                    Portfolio <b>UX</b>
+                    <a href="#" data-toggle-mod="ui" class="go-to-other">UI</a>
+                </h2>
+            </span>
+            <div class="page-content__list">
+                <ul class="list-unstyled">
+                    <li><a href="#">UX #1: Nome do Case</a></li>
+                    <li><a href="#">UX #1: Outro Nome de Case</a></li>
+                </ul>
+            </div>
         </div>
         <div class="page-content page-content--ui">
-            <h2>Portfolio <b>UI</b></h2>
-            <ul>
-                <li><a href="#">UX #1: Adon</a></li>
-                <li><a href="#">UX #1: Adon</a></li>
-            </ul>
+            <span class="page-content__header"></span>
+            <a href="#" data-toggle-mod="close" class="page-back"><i class="fas fa-arrow-left"></i></a>
+            <h2 class="title">
+                Portfolio <b>UI</b>
+                <a href="#" data-toggle-mod="ux" class="go-to-other">UX</a>
+            </h2>
+            </span>
+            <div class="page-content__list">
+                <ul class="list-unstyled">
+                    <li><a href="#">UI #1: Um case de UI</a></li>
+                    <li><a href="#">UI #2: Outro case de UI</a></li>
+                </ul>
+            </div>
         </div>
 
         <img src="/img/poe-lines-red.svg" alt="Poe Bellentani Red" class="poe poe--red">
         <img src="/img/poe-lines-blue.svg" alt="Poe Bellentani Blue" class="poe poe--blue">
-        <img src="/img/poe-lines-gray.svg" alt="Poe Bellentani Blue" class="poe poe--lines" data-toggle-mod="ux">
+        <img src="/img/poe-lines-gray.svg" alt="Poe Bellentani Blue" class="poe poe--lines">
         <img src="/img/poe-color.svg" alt="Poe Bellentani Blue" class="poe poe--color">
     </main>
 
