Static page generated

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -101,8 +101,20 @@
             </span>
             <div class="page-content__list">
                 <ul class="list-unstyled">
-                    <li><a href="#">UX #1: Nome do Case</a></li>
-                    <li><a href="#">UX #1: Outro Nome de Case</a></li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                <strong>UX #1:</strong> Nome do Case
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                <strong>UX #2:</strong> Outro Nome de Case
+                            </span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -116,8 +128,20 @@
             </span>
             <div class="page-content__list">
                 <ul class="list-unstyled">
-                    <li><a href="#">UI #1: Um case de UI</a></li>
-                    <li><a href="#">UI #2: Outro case de UI</a></li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                <strong>UI #1:</strong> Um case de UI
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                <strong>UI #2:</strong> Outro case de UI
+                            </span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
