--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -72,7 +72,7 @@
 </head>
 
 <body class="portfolio">
-    <main class="portfolio--body">
+    <main class="portfolio__body">
         <a id="home" href="javascript.void(0)" class="main-anchor" aria-label="Início do Site"></a>
         <!-- Google Tag Manager (noscript) -->
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NP23W7C" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -80,14 +80,14 @@
 
         <ul class="cover-buttons list-unstyled">
             <li>
-                <button class="cta-cover cta-cover--ux" data-toggle-mod="ux">
+                <a href="#ux" class="cta-cover cta-cover--ux" data-toggle-mod="ux">
                     <span>UX</span>
-                </button>
+                </a>
             </li>
             <li>
-                <button class="cta-cover cta-cover--ui" data-toggle-mod="ui">
+                <a href="#ui" class="cta-cover cta-cover--ui" data-toggle-mod="ui">
                     <span>UI</span>
-                </button>
+                </a>
             </li>
         </ul>
 
@@ -96,22 +96,15 @@
                 <a href="#" data-toggle-mod="close" class="page-back"><i class="fas fa-arrow-left"></i></a>
                 <h2 class="title">
                     Portfolio <b>UX</b>
-                    <a href="#" data-toggle-mod="ui" class="go-to-other">UI</a>
+                    <a href="#ui" data-toggle-mod="ui" class="go-to-other">UI</a>
                 </h2>
             </span>
             <div class="page-content__list">
                 <ul class="list-unstyled">
                     <li>
-                        <a href="#">
+                        <a href="portfolio-ux-innovatech.html">
                             <span>
-                                <strong>UX #1:</strong> Nome do Case
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>
-                                <strong>UX #2:</strong> Outro Nome de Case
+                                <strong>UX #1:</strong> Innovatech
                             </span>
                         </a>
                     </li>
@@ -123,22 +116,15 @@
             <a href="#" data-toggle-mod="close" class="page-back"><i class="fas fa-arrow-left"></i></a>
             <h2 class="title">
                 Portfolio <b>UI</b>
-                <a href="#" data-toggle-mod="ux" class="go-to-other">UX</a>
+                <a href="#ux" data-toggle-mod="ux" class="go-to-other">UX</a>
             </h2>
             </span>
             <div class="page-content__list">
                 <ul class="list-unstyled">
                     <li>
-                        <a href="#">
+                        <a href="portfolio-ui-ryd.html">
                             <span>
-                                <strong>UI #1:</strong> Um case de UI
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>
-                                <strong>UI #2:</strong> Outro case de UI
+                                <strong>UI #1:</strong> RYD Agro
                             </span>
                         </a>
                     </li>
