--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,7 @@
         </ul>
     </main>
 
-    <!-- build:js js/poebellentani.js -->
-    <script src="/js/main.js"></script>
-    <!-- endbuild -->
+    <script src="js/poebellentani.js"></script>
 
 </body>
 
