--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -112,12 +112,12 @@
             </div>
         </div>
         <div class="page-content page-content--ui">
-            <span class="page-content__header"></span>
-            <a href="#" data-toggle-mod="close" class="page-back"><i class="fas fa-arrow-left"></i></a>
-            <h2 class="title">
-                Portfolio <b>UI</b>
-                <a href="#ux" data-toggle-mod="ux" class="go-to-other">UX</a>
-            </h2>
+            <span class="page-content__header">
+                <a href="#" data-toggle-mod="close" class="page-back"><i class="fas fa-arrow-left"></i></a>
+                <h2 class="title">
+                    Portfolio <b>UI</b>
+                    <a href="#ux" data-toggle-mod="ux" class="go-to-other">UX</a>
+                </h2>
             </span>
             <div class="page-content__list">
                 <ul class="list-unstyled">
@@ -138,9 +138,7 @@
         <img src="/img/poe-color.svg" alt="Poe Bellentani Blue" class="poe poe--color">
     </main>
 
-    <!-- build:js js/poebellentani.js -->
-    <script src="/js/main.js"></script>
-    <!-- endbuild -->
+    <script src="js/poebellentani.js"></script>
 
 </body>
 
