--- a/public/portfolio-ui-ryd.html
+++ b/public/portfolio-ui-ryd.html
@@ -158,9 +158,7 @@
         </article>
     </main>
 
-    <!-- build:js js/poebellentani.js -->
-    <script src="/js/main.js"></script>
-    <!-- endbuild -->
+    <script src="js/poebellentani.js"></script>
 
 </body>
 
