--- a/public/index.html
+++ b/public/index.html
@@ -72,24 +72,26 @@
 </head>
 
 <body class="landing">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NP23W7C" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <main>
         <a id="home" href="javascript.void(0)" class="main-anchor" aria-label="Início do Site"></a>
-        <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NP23W7C" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-        <!-- End Google Tag Manager (noscript) -->
 
         <h1>Poe Bellentani</h1>
         <p>UX/UI Designer & Frontend Developer</p>
         <ul>
             <li><small><a href="https://www.linkedin.com/in/bellentani/" target="_blank"><i class="fab fa-linkedin-in"></i> linkedin.com/in/bellentani/</a></small></li>
-            <li><small><a href="https://xd.adobe.com/view/d35d6a12-d577-43ee-7033-d3d89be95f2a-a56c/?fullscreen" target="_blank"><i class="fas fa-palette"></i>Portfolio (made in Adobe XD)</a></small></li>
-            <li><small><a href="/portfolio.html" target="_blank"><i class="fas fa-code"></i>Portfolio (coded, HTML - Work in Progress)</a></small></li>
+            <li><small><a href="https://xd.adobe.com/view/d35d6a12-d577-43ee-7033-d3d89be95f2a-a56c/?fullscreen" target="_blank"><i class="fas fa-palette"></i> Portfolio (made in Adobe XD)</a></small></li>
+            <li><small><a href="/portfolio.html" target="_blank"><i class="fas fa-code"></i> Portfolio (coded, HTML - Work in Progress)</a></small></li>
             <li><small><a href="https://github.com/bellentani" target="_blank"><i class="fab fa-github"></i> Github</a></small></li>
             <li><small><a href="mailto:hello@poebellentani.me"><i class="fas fa-envelope"></i> hello@poebellentani.me</a></small></li>
         </ul>
     </main>
 
-    <script src="js/poebellentani.js"></script>
+    <!-- build:js js/poebellentani.js -->
+    <script src="/js/main.js"></script>
+    <!-- endbuild -->
 
 </body>
 
