--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="canonical" href="https://poebellentani.me/">
-    <meta itemprop="name" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta itemprop="name" content="Poe Bellentani, UX Specialist, UI Designer, Design Engineer &amp; Developer">
     <meta itemprop="description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta itemprop="image" content="https://poebellentani.me/img/poebellentani.jpg">
     <!-- Metatags gerais -->
