--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,21 @@
     <meta itemprop="image" content="https://poebellentani.me/img/poebellentani.jpg">
     <!-- Metatags gerais -->
     <meta name="description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
-    <title>Poe Bellentani, UX/UI Design &amp; Developer</title>
+    <title>Poe Bellentani, UX Specialist, UI Designer, Design Engineer &amp; Developer</title>
     <meta name="keywords" content="UX consultant, UI design, Design, UX consultoria, User Experience, Consultoria, Frontend Developer">
     <!-- Metatags opcionais -->
-    <meta name="copyright" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta name="copyright" content="Poe Bellentani, UX Specialist, UI Designer, Design Engineer &amp; Developer">
     <meta name="revisit-after" content="1 day">
     <meta name="author" content="Poe Bellentani">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@bonsaiux">
-    <meta name="twitter:title" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta name="twitter:title" content="Poe Bellentani, UX Specialist, UI Designer, Design Engineer &amp; Developer">
     <meta name="twitter:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta name="twitter:image" content="https://poebellentani.me/img/twitter-image.jpg">
     <meta name="twitter:url" content="https://poebellentani.me/">
     <!-- Facebook Open Graph -->
-    <meta property="og:title" content="Poe Bellentani: UX/UI Designer &amp; Frontend Developer">
+    <meta property="og:title" content="Poe Bellentani, UX Specialist, UI Designer, Design Engineer &amp; Developer">
     <meta property="og:site_name" content="Poe Bellentani, UX/UI Design &amp; Developer">
     <meta property="og:url" content="https://poebellentani.me/">
     <meta property="og:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
