--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -145,9 +145,7 @@
         </div>
     </main>
 
-    <!-- build:js js/poebellentani.js -->
-    <script src="/js/main.js"></script>
-    <!-- endbuild -->
+    <script src="js/poebellentani.js"></script>
 
 </body>
 
