--- a/public/index.html
+++ b/public/index.html
@@ -5,26 +5,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="canonical" href="https://poebellentani.me/">
-    <meta itemprop="name" content="Poe Bellentani, UX Specialist, UI Designer, Design Engineer &amp; Developer">
+    <meta itemprop="name" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta itemprop="description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta itemprop="image" content="https://poebellentani.me/img/poebellentani.jpg">
     <!-- Metatags gerais -->
     <meta name="description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
-    <title>Poe Bellentani, UX Specialist, UI Designer, Design Engineer &amp; Developer</title>
-    <meta name="keywords" content="UX consultant, UI design, Design, UX consultoria, User Experience, Consultoria, Frontend Developer">
+    <title>Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer</title>
+    <meta name="keywords" content="UX consultant, Design System, Design Ops, UI design, Design, UX consultant, User Experience, Consultoria UX, Consultoria, Frontend Developer">
     <!-- Metatags opcionais -->
-    <meta name="copyright" content="Poe Bellentani, UX Specialist, UI Designer, Design Engineer &amp; Developer">
+    <meta name="copyright" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta name="revisit-after" content="1 day">
     <meta name="author" content="Poe Bellentani">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@bonsaiux">
-    <meta name="twitter:title" content="Poe Bellentani, UX Specialist, UI Designer, Design Engineer &amp; Developer">
+    <meta name="twitter:title" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta name="twitter:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta name="twitter:image" content="https://poebellentani.me/img/twitter-image.jpg">
     <meta name="twitter:url" content="https://poebellentani.me/">
     <!-- Facebook Open Graph -->
-    <meta property="og:title" content="Poe Bellentani, UX Specialist, UI Designer, Design Engineer &amp; Developer">
+    <meta property="og:title" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta property="og:site_name" content="Poe Bellentani, UX/UI Design &amp; Developer">
     <meta property="og:url" content="https://poebellentani.me/">
     <meta property="og:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
@@ -82,8 +82,9 @@
         <p>UX/UI Designer & Frontend Developer</p>
         <ul>
             <li><small><a href="https://www.linkedin.com/in/bellentani/" target="_blank"><i class="fab fa-linkedin-in"></i> linkedin.com/in/bellentani/</a></small></li>
-            <li><small><a href="https://xd.adobe.com/view/d35d6a12-d577-43ee-7033-d3d89be95f2a-a56c/?fullscreen" target="_blank"><i class="fas fa-palette"></i> Portfolio (made in Adobe XD)</a></small></li>
-            <li><small><a href="/portfolio.html" target="_blank"><i class="fas fa-code"></i> Portfolio (coded, HTML - Work in Progress)</a></small></li>
+            <li><small><a href="https://www.figma.com/@bellentani" target="_blank"><i class="fab fa-linkedin-in"></i> figma.com/@bellentani</a></small></li>
+            <li><small><a href="/portfolio_pt-br.html" target="_blank"><i class="fas fa-code"></i> Portfolio (coded, HTML) - Português</a></small></li>
+            <!-- <li><small><a href="/portfolio_en.html" target="_blank"><i class="fas fa-code"></i> Portfolio (coded, HTML - English</a></small></li> -->
             <li><small><a href="https://github.com/bellentani" target="_blank"><i class="fab fa-github"></i> Github</a></small></li>
             <li><small><a href="mailto:hello@poebellentani.me"><i class="fas fa-envelope"></i> hello@poebellentani.me</a></small></li>
         </ul>
