--- a/public/portfolio-ui-ry_pt-br.html
+++ b/public/portfolio-ui-ry_pt-br.html
@@ -91,7 +91,7 @@
                                 </div>
                                 <a href="#more-about" class="btn btn-outline-primary btn-lg">Ver mais <i class="fas fa-arrow-right"></i></a>
                                 <div class="go-home box-caller">
-                                    <a href="portfolio.html#ui" class="title">
+                                    <a href="portfolio_pt-br.html#ui" class="title">
                                         <!-- se vier a hash com #ux ou #ui define o layout do "back" -->
                                         <i>Portfolio</i> <b>UI</b>
                                         <span class="go-to-other">UX</span>
