--- a/public/portfolio_pt-br.html
+++ b/public/portfolio_pt-br.html
@@ -124,14 +124,14 @@
                     <li>
                         <a href="portfolio-ui-apollion_pt-br.html">
                             <span>
-                            <strong>UI #1:</strong> Design System & Ops, Apollion DS - Captalys (2020 até 2022)
+                            <strong>UI #1:</strong> Design System & Ops (2020 ~ 2022)
                             </span>
                         </a>
                     </li>
                     <li>
                         <a href="portfolio-ui-ryd_pt-br.html">
                             <span>
-                                <strong>UI #1:</strong> RYD Agro
+                                <strong>UI #2:</strong> RYD Agro (2018)
                             </span>
                         </a>
                     </li>
